# krasserUndKreativer

./: .gitignore  CONTRIBUTING.md  README.md  dev.sh  docker-compose.yml  package.json  pnpm-lock.yaml
.github/: FUNDING.yml
.github/workflows/: deploy.yml
apps/api/: .env.example  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20250204_001_initial.py
apps/api/src/: __init__.py  main.py
apps/api/src/core/: config.py  database.py
apps/api/src/models/: __init__.py  models.py  users.py
apps/api/src/routers/: __init__.py  boards.py  chunks.py  guests.py  history.py  objects.py  payments.py  users.py
apps/api/src/services/: spatial.py
apps/api/src/websocket/: __init__.py  handlers.py  manager.py
apps/web/: .env.example  index.html  package.json  tailwind.config.js  vite.config.js  vite.config.ts
apps/web/public/: 404.html  manifest.json  sw.js
apps/web/public/icons/: generate-icons.sh
apps/web/src/: App.tsx  index.css  main.tsx
apps/web/src/hooks/: useAudioRecorder.ts  useChunkedLoading.ts  useExport.ts  useKeyboardNavigation.ts  useKeyboardShortcuts.ts  useMediaUpload.ts  usePresenterMode.ts  useToolHotbar.ts  useVoiceVideo.ts  useWebSocket.ts  useWorkspacePermission.ts
apps/web/src/pages/: AdminPage.tsx  DatenschutzPage.tsx  DemoPage.tsx  ImpressumPage.tsx  InvitePage.tsx  JoinPage.tsx  LandingPage.tsx  LandingPageOld.tsx  LoginPage.tsx  RegisterPage.tsx  index.ts
apps/web/src/stores/: authStore.ts  canvasStore.ts  chatStore.ts  userSettingsStore.ts
data/: infinite_canvas.db
(+44 files in other folders)
